tests/baselines/reference/aliasInaccessibleModule2.errors.txt
==== tests/cases/compiler/aliasInaccessibleModule2.ts (3 errors) ====
    module M {
        module N {
            class C {
            }
            
        }
        import R = N;
        export import X = R;
        ~~~~~~~~~~~~~~~~~~~~
!!! aliasInaccessibleModule2.ts(8,5): error TS2182: Exported import declaration 'X' is assigned value with type that is using inaccessible module 'N'.
        ~~~~~~~~~~~~~~~~~~~~
!!! aliasInaccessibleModule2.ts(8,5): error TS2185: Exported import declaration 'X' is assigned container that is or is using inaccessible module 'N'.
                          ~
!!! aliasInaccessibleModule2.ts(8,23): error TS2187: Internal module reference 'R' in import declaration does not reference module instance for 'N'.
    }